--- a/src/Components/works/works.css
+++ b/src/Components/works/works.css
@@ -1,12 +1,26 @@
-.works {
+/* WORKS SECTION  */
+.works--section {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	min-height: 50vh;
-	color: indigo;
+	justify-content: flex-start;
+	align-items: left;
+	min-height: 100vh;
+	color: blueviolet;
+	padding: 50px;
 }
 
-.p-section {
-	margin: 20px 20px 100px 20px;
+/* WORKS TITLE  */
+.works--section h2 {
+	color: blueviolet;
+	font-weight: bold;
+	font-size: 26px;
+	margin: 0 0 30px 0;
+	padding: 5px;
+}
+
+/* WORKS PARAGRAPH  */
+.works--section p {
+	color: black;
+	margin: 0 0 20px 0;
 	padding: 5px;
 }
