--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -1,7 +1,26 @@
-.about {
+/* ABOUT SECTION  */
+.about--section {
 	display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 50vh;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: left;
+	min-height: 100vh;
 	color: cornflowerblue;
+	padding: 50px;
+}
+
+/* ABOUT TITLE */
+.about--section h2 {
+	color: cornflowerblue;
+	font-weight: bold;
+	font-size: 26px;
+	margin: 0 0 30px 0;
+	padding: 5px;
+}
+
+/* ABOUT PARAGRAPH  */
+.about--section p {
+	color: black;
+	margin: 0 0 20px 0;
+	padding: 5px;
 }
