--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -1,7 +1,26 @@
-.home {
+/* HOME */
+.home--section {
 	display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 50vh;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: left;
+	min-height: 100vh;
 	color: hotpink;
+	padding: 50px;
+}
+
+/* HOME H2 */
+.home--section h2 {
+	color: hotpink;
+	font-weight: bold;
+	font-size: 26px;
+	margin: 0 0 30px 0;
+	padding: 5px;
+}
+
+/* HOME PARAGRAPH */
+.home--section p {
+	color: black;
+	margin: 0 0 20px 0;
+	padding: 5px;
 }
